@@ -322,3 +322,4 @@ Revision	Version Updated		Log Message
 299		C++			All cultures from EU3 cultural unions now accepted.
 300		C++			Further tech updates.
 301		C++			Tweaked pop conversion of bureaucrats, aristocrats, and capitalists.
+302		C++			Tweaked pop conversion of officers, soldiers, artisans, clerks, and craftsmen.
